--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,8 +1,7 @@
 {
 	"port": 32397,
 	"plex": {
-		"host": "http://127.0.0.1",
-		"port": "32400",
+		"serverURL": "http://127.0.0.1:32400",
 		"token": "bxViLIUTBlbdow-iuBVT"
 	},
 	"ssl": {
