--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"build": "tsc",
 		"setup-dev-modules": "rm -rf node_modules/letterboxd-retriever && ln -s \"$PWD/../letterboxd-retriever\" node_modules/letterboxd-retriever",
 		"start": "tsc && node dist/main.js",
-		"start_test": "tsc && node --trace-deprecation dist/main.js --config=config/config.json --verbose",
+		"start_test": "tsc && node --trace-deprecation dist/main.js --config=config/config.json --verbose --verbose-traffic",
 		"debug": "tsc && node --inspect dist/main.js --config=config/config.json --verbose",
 		"lint": "eslint . --ext .ts"
 	},
