update config structure, bump version

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -13,7 +13,9 @@
 	},
 	"perUser": {
 		"exampleuser@example.com": {
-			"letterboxdUsername": "letterboxdusername"
+			"letterboxd": {
+				"username": "letterboxdusername"
+			}
 		}
 	}
 }
