--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
 		"module": "commonjs",
 		"esModuleInterop": true,
 		"target": "es6",
+		"lib": ["ES2021"],
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"outDir": "dist",
 		"plugins": [
 			{ "transform": "ts-transformer-keys/transformer" }
 		]
-	},
-	"lib": ["es2015"]
+	}
 }
