--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
 		"httpolyglot": "^0.1.2",
 		"letterboxd-retriever": "https://github.com/lufinkey/letterboxd-retriever.git",
 		"node-forge": "^1.3.1",
-		"uuid": "^11.0.5",
 		"winreg": "^1.2.5",
 		"xml2js": "^0.6.2"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
-		"@types/express-http-proxy": "^1.6.6",
+		"@types/express-http-proxy": "1.6.6",
 		"@types/http-proxy": "^1.17.15",
 		"@types/node": "^22.16.5",
 		"@types/node-forge": "^1.3.11",
