--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"outDir": "dist",
+		"strictNullChecks": true,
 		"plugins": [
 			{ "transform": "ts-transformer-keys/transformer" }
 		]
